--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 75vh;
+  height: 75svh;
   gap: 25px;
 }
 
